--- a/Projekat za praksu zadatak 2/src/Logic/gui.fxml
+++ b/Projekat za praksu zadatak 2/src/Logic/gui.fxml
@@ -38,7 +38,7 @@
             <Insets top="5.0" />
          </padding>
           </Label>
-      <Label fx:id="turnLabel" text="Turn:" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+      <Label text="Turn:" GridPane.halignment="CENTER" GridPane.rowIndex="1">
          <font>
             <Font size="18.0" />
          </font>
